<resources>
    <string name="app_name">Colaboradores Test</string>
    <string name="google_error_credentials">Usuario o contraseña incorrectos</string>
    <string name="google_success_credentials">Inicio de sesión exitoso</string>
    <string name="google_error_exception">Ocurrio un error, intentelo mas tarde</string>
    <string name="collaborators">Colaboradores</string>
    <string name="wait">Espere porfavor</string>
    <string name="add_collaborator">Agregar Colaborador</string>
    <string name="my_collaborators">Mis colaboradores</string>
    <string name="collaborators_errors_get">Ocurrio un error al obtener los colaboradores</string>
    <string name="collaborators_errors_decompress">Ocurrio un error al descomprimir los colaboradores</string>
    <string name="network_error">Ocurrio un error de red</string>
    <string name="api_download_error">Ocurrio un error al descargar los colaboradores</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_question">¿Esta seguro de cerrar sesión?</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="empty_collaborators">Sin Colaboradores</string>
    <string name="loading">Cargando</string>
    <string name="getting_data">Obteniendo datos</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electónico</string>
    <string name="select_position">Seleccione una posición en el mapa</string>
    <string name="save">Guardar</string>
    <string name="error_insert_collaborator">Ocurrió un error al guardar la información</string>
    <string name="address">Dirección</string>
    <string name="required">El campo es requerido</string>
    <string name="error_email">Ingrese un correo valido</string>
    <string name="insert_success">Colaborador agregado</string>
</resources>